fixed: visibility of titles when clicking on links, divider

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-padding-top: 100px;
+}
+
 body {
   background-image: url(images/bg-picture.svg);
   background-repeat: no-repeat;
@@ -187,6 +191,11 @@ code {
   margin-bottom: 40px;
 }
 
-.section__divider {
-  padding-bottom: 20px;
+.section__title::before {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 8px;
+  background: black;
+  margin-bottom: 20px;
 }
