--- a/who-is-using/style.css
+++ b/who-is-using/style.css
@@ -45,6 +45,8 @@ li {
   font-size: 36px;
   line-height: 133%;
   text-transform: uppercase;
+
+  padding-left: 120px;
 }
 
 .header__language {
@@ -113,13 +115,26 @@ li {
   margin-bottom: 40px;
 }
 
-.section__divider {
+/* .section__divider {
   position: relative;
   top: -10px;
   left: 0;
   padding-right: 20px;
-}
+} */
 
+.divider {
+  margin-bottom: 20px;
+  margin-right: 20px;
+
+  width: 100px;
+  height: 8px;
+  background-color: black;
+  border: 1px solid black;
+
+  position: relative;
+  top: -10px;
+  left: 0;
+}
 
 /* logos flip card */
 
@@ -167,6 +182,13 @@ li {
   transform: rotateY(180deg);
 }
 
-
-
-
+.section__title::before {
+  content: "";
+  position: relative;
+  top: 25px;
+  left: -120px;
+  display: block;
+  width: 100px;
+  height: 8px;
+  background: black;
+}
